# email_newsletter

./: .gitignore  Cargo.toml  Notes.md  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
tests/: health_check.rs
