[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Ayush Bindlish <email@ayushbindlish.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"


[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
